update convert_blob for warthog

--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
         "base58-native": "*",
         "bignum": "*",
         "cli-color": "^1.4.0",
-        "cryptoforknote-util": "https://github.com/MoneroOcean/node-cryptoforknote-util.git",
-        "cryptonight-hashing": "https://github.com/MoneroOcean/node-cryptonight-hashing.git",
+        "crypto": "^1.0.1",
         "dateformat": "4.5.1",
+        "elliptic": "^6.5.6",
+        "js-sha256": "^0.11.0",
         "mailgun.js": "2.0.1",
         "node-telegram-bot-api": "^0.58.0",
         "nodemailer": "2.7.2",
@@ -22,8 +23,10 @@
         "redis": "3.1.2",
         "request": "^2.88.0",
         "request-promise-native": "^1.0.5",
+        "secp256k1": "^5.0.0",
         "socket.io": "^2.5.0",
-        "time-ago": "*"
+        "sync-request": "^6.1.0",
+        "verushash": "git+https://github.com/techsaavy8784/verushash-node.git"
     },
     "engines": {
         "node": ">=4.0"
