--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "bignum": "*",
         "cli-color": "^1.4.0",
         "crypto": "^1.0.1",
+        "cryptoforknote-util": "git+https://github.com/MoneroOcean/node-cryptoforknote-util.git",
         "dateformat": "4.5.1",
         "elliptic": "^6.5.6",
         "js-sha256": "^0.11.0",
